# arma-einsum

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  arma_einsum.hpp  meson.build
.github/workflows/: ci.yml
benchmarks/: bench.cpp  meson.build
example-meson/: README.md  main.cpp  main_fmt.cpp  meson.build
example-meson/subprojects/: arma-einsum.wrap
subprojects/: armadillo.wrap
tests/: meson.build  reference.py  tests.hpp  tests_contraction.cpp  tests_einsum.cpp  tests_iterator.cpp  tests_parser.cpp
